fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@ body,
 #root {
   height: 100%;
   text-align: center;
+  overflow: hidden;
 }
